--- a/merge-acquisition.html
+++ b/merge-acquisition.html
@@ -76,9 +76,13 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="blog-full-both-sidebar-with-frame.html">Research</a>
-
+                                        <a href="#">Portal</a>
+                                        <ul class="sub-menu">
+                                            <li class="menu-item"><a href="#">Client Portal</a></li>
+                                            <li class="menu-item"><a href="#">Research Portal</a></li>
+                                        </ul>
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="faq.html">FAQs</a>
 
