--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
                             <li class="menu-item menu-item-has-children">
                                 <a href="#">Portal</a>
                                 <ul class="sub-menu">
-                                    <li class="menu-item"><a href="asset-management.html">Client Portal</a></li>
-                                    <li class="menu-item"><a href="blog-full-both-sidebar-with-frame.html">Research</a></li>
-
+                                    <li class="menu-item"><a href="#">Client Portal</a></li>
+                                    <li class="menu-item"><a href="#">Research Portal</a></li>
                                 </ul>
                             </li>
 
@@ -123,7 +122,7 @@
                             <div class="corzo-top-bar-right-text">
                                 <i class="fa5s fa5-envelope-open"
                                    style="font-size: 19px; color: #f7821e; margin-left: 20px; margin-right: 10px;"></i>
-                                <a href="mailto: info@constantcap.com.gh"
+                                <a href="mailto:info@constantcap.com.gh"
                                    class="__cf_email__">info@constantcap.com.gh</a>
                             </div>
                             <div class="corzo-top-bar-right-social">
@@ -191,6 +190,7 @@
                                         </a>
 
                                     </li>
+
                                     <li class="menu-item menu-item-has-children corzo-normal-menu">
                                         <a href="asset-management.html" class="sf-with-ul-pre"><span
                                                 class="corzo-menu-item-description">03</span>Services</a>
@@ -205,14 +205,13 @@
                                     </li>
 
                                     <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                        <a href="asset-management.html" class="sf-with-ul-pre"><span
+                                        <a href="#" class="sf-with-ul-pre"><span
                                                 class="corzo-menu-item-description">04</span>Portal</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item"><a href="asset-management.html">Client Portal</a></li>
-                                            <li class="menu-item"><a href="blog-full-both-sidebar-with-frame.html">Research</a></li>
+                                            <li class="menu-item"><a href="#">Client Portal</a></li>
+                                            <li class="menu-item"><a href="#">Research</a></li>
                                         </ul>
                                     </li>
-                                    
 
 <!--                                    <li class="menu-item menu-item-has-children corzo-normal-menu">-->
 <!--                                        <a href="blog-full-both-sidebar-with-frame.html" class="sf-with-ul-pre">-->
