--- a/risk-management.html
+++ b/risk-management.html
@@ -75,7 +75,11 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="blog-full-both-sidebar-with-frame.html">Research</a>
+                                        <a href="#">Portal</a>
+                                        <ul class="sub-menu">
+                                            <li class="menu-item"><a href="#">Client Portal</a></li>
+                                            <li class="menu-item"><a href="#">Research Portal</a></li>
+                                        </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="faq.html">FAQs</a>
@@ -174,8 +178,12 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="blog-full-both-sidebar-with-frame.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Research</a>
-
+                                                <a href="#" class="sf-with-ul-pre"><span
+                                                        class="corzo-menu-item-description">04</span>Portal</a>
+                                                <ul class="sub-menu">
+                                                    <li class="menu-item"><a href="#">Client Portal</a></li>
+                                                    <li class="menu-item"><a href="#">Research</a></li>
+                                                </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>
