main menu update

--- a/risk-management.html
+++ b/risk-management.html
@@ -75,7 +75,7 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Portal</a>
+                                        <a href="#">Portals</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="#">Client Portal</a></li>
                                             <li class="menu-item"><a href="#">Research Portal</a></li>
@@ -178,8 +178,8 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="#" class="sf-with-ul-pre"><span
-                                                        class="corzo-menu-item-description">04</span>Portal</a>
+                                                <a href="#" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Portal</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item"><a href="#">Client Portal</a></li>
                                                     <li class="menu-item"><a href="#">Research</a></li>
