--- a/asset-management.html
+++ b/asset-management.html
@@ -54,37 +54,43 @@
                             <a class="corzo-mm-menu-button corzo-mobile-menu-button corzo-mobile-button-hamburger" href="#corzo-mobile-menu"><span></span></a>
                             <div class="corzo-mm-menu-wrap corzo-navigation-font" id="corzo-mobile-menu" data-slide="right">
                                 <ul id="menu-main-navigation" class="m-menu">
-                                    <li
-                                        class="menu-item menu-item-home menu-item-has-children"
-                                    >
-                                        <a href="index.html" aria-current="page">Home</a>
 
+                                    <li class="menu-item menu-item-home menu-item-has-children">
+                                        <a href="index.html" aria-current="page">Home</a>
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="about.html">Corporate Profile</a>
-
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="asset-management.html">Services</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="asset-management.html">Securities Trading</a></li>
-                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                             <li class="menu-item"><a href="smart-manufacturing.html">Investment Research</a></li>
                                             <li class="menu-item"><a href="risk-management.html">Investment Advisory</a></li>
                                             <li class="menu-item"><a href="insurance.html">Strategic Advisory</a></li>
                                             <li class="menu-item"><a href="private-equity-2.html">Private Equity</a></li>
-
                                         </ul>
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="blog-full-both-sidebar-with-frame.html">Research</a>
+                                        <a href="#">Portals</a>
+                                        <ul class="sub-menu">
+                                            <li class="menu-item"><a href="#">Client Center</a></li>
+                                            <li class="menu-item"><a href="#">Investment Research</a></li>
+                                        </ul>
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="faq.html">FAQs</a>
                                     </li>
+
                                     <li class="menu-item menu-item-has-children">
                                         <a href="contact-3.html">Support</a>
                                     </li>
+
                                 </ul>
                             </div>
                         </div>
@@ -173,8 +179,12 @@
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
-                                                <a href="blog-full-both-sidebar-with-frame.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">04</span>Research</a>
-
+                                                <a href="#" class="sf-with-ul-pre">
+                                                    <span class="corzo-menu-item-description">04</span>Portals</a>
+                                                <ul class="sub-menu">
+                                                    <li class="menu-item"><a href="#">Client Center</a></li>
+                                                    <li class="menu-item"><a href="#">Investment Research</a></li>
+                                                </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="faq.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">05</span>FAQs</a>
@@ -218,8 +228,8 @@
                                 <div
                                     class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                                     style="background-image: url(upload/about2-bg.png); background-repeat: no-repeat; background-position: top center;"
-                                    data-parallax-speed="0"
-                                ></div>
+                                    data-parallax-speed="0">
+                                </div>
                             </div>
                             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
                                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
@@ -231,7 +241,7 @@
                                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr">
                                                         <div class="gdlr-core-title-item-title-wrap">
                                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 48px; font-weight: 300; letter-spacing: 0px; text-transform: none; color: #f7821e;">
-                                                                Our Services<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
+                                                                Quick Links<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                                             </h3>
                                                         </div>
                                                     </div>
@@ -240,7 +250,7 @@
                                                     <div class="gdlr-core-custom-menu-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-style-2" style="padding-bottom: 15px; font-size: 19px;">
                                                         <ul id="menu-services" class="menu">
                                                             <li class="menu-item"><a href="asset-management.html">Securities Trading</a></li>
-                                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                                             <li class="menu-item"><a href="smart-manufacturing.html">Investment Research</a></li>
                                                             <li class="menu-item"><a href="risk-management.html">Investment Advisory</a></li>
                                                             <li class="menu-item"><a href="insurance.html">Strategic Advisory</a></li>
@@ -303,11 +313,11 @@
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align gdlr-core-no-p-space" style="padding-bottom: 40px;">
                                                         <div class="gdlr-core-text-box-item-content" style="font-size: 23px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify; color: #353535;">
-
-                                                                <p>with execution expertise in listed securities and over-the-counter securities, 
-                                                                   and we focus on providing competitive, efficient and quality execution for every client mandate.
-                                                                   We provide clients with dedicated and innovative bespoke investment trading solutions. 
-                                                                   We offer our clients the platform to efficiently take advantage of trading opportunities in the markets
+                                                                <p>
+                                                                    with execution expertise in listed securities and over-the-counter securities,
+                                                                    and we focus on providing competitive, efficient and quality execution for every client mandate.
+                                                                    We provide clients with dedicated and innovative bespoke investment trading solutions.
+                                                                    We offer our clients the platform to efficiently take advantage of trading opportunities in the markets
                                                                 </p>
                                                         </div>
                                                     </div>
@@ -323,7 +333,6 @@
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align gdlr-core-no-p-space" style="padding-bottom: 40px;">
                                                         <div class="gdlr-core-text-box-item-content" 
                                                              style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; text-align: justify; color: #525252;">
-
                                                             <p>
                                                                 Our trading desk focuses on the ultimate goals and objectives of our clients. We closely evaluate market moves to uncover relative value. 
                                                                 We review portfolios to identify opportunities and challenges in both current and potential future market conditions, and help clients to develop portfolio strategies. 
@@ -610,10 +619,12 @@
                             <div class="gdlr-core-pbf-background-wrap">
                                 <div
                                     class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
-                                    style="background-image: url(upload/SVC-bg-black.jpg); background-size: cover; background-position: center;"
-                                    data-parallax-speed="0"
-                                ></div>
+                                    style="background-image: url(upload/SVC-bg-black-Copy.jpg); background-size: cover; background-position: center;"
+                                    data-parallax-speed="0">
+
+                                </div>
                             </div>
+
                             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
                                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                                     <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first" id="gdlr-core-column-36170">
