--- a/team-profile-ike.html
+++ b/team-profile-ike.html
@@ -785,7 +785,7 @@
                            style="padding-bottom: 0px ;">
                         <div class="gdlr-core-text-box-item-content"
                              style="font-size: 23px ;font-weight: 500 ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;">
-                          <p>Founder &amp; CEO</p>
+                          <p>Non Executive Director</p>
                         </div>
                       </div>
                     </div>
