clean services menu

--- a/about.html
+++ b/about.html
@@ -73,7 +73,11 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
-                                        <a href="#">Research</a>
+                                        <a href="#">Portals</a>
+                                        <ul class="sub-menu">
+                                            <li class="menu-item"><a href="#">Client Center</a></li>
+                                            <li class="menu-item"><a href="#">Investment Research</a></li>
+                                        </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
                                         <a href="faq.html">FAQs</a>
@@ -180,10 +184,10 @@
 
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="#" class="sf-with-ul-pre">
-                                                    <span class="corzo-menu-item-description">04</span>Portal</a>
+                                                    <span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
-                                                    <li class="menu-item"><a href="#">Client Portal</a></li>
-                                                    <li class="menu-item"><a href="#">Research</a></li>
+                                                    <li class="menu-item"><a href="#">Client Center</a></li>
+                                                    <li class="menu-item"><a href="#">Investment Research</a></li>
                                                 </ul>
                                             </li>
 
