--- a/risk-management.html
+++ b/risk-management.html
@@ -67,7 +67,7 @@
                                         <a href="asset-management.html">Services</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item"><a href="asset-management.html">Securities Trading</a></li>
-                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                                            <li class="menu-item"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                             <li class="menu-item"><a href="smart-manufacturing.html">Investment Research</a></li>
                                             <li class="menu-item"><a href="risk-management.html">Investment Advisory</a></li>
                                             <li class="menu-item"><a href="insurance.html">Strategic Advisory</a></li>
@@ -77,8 +77,8 @@
                                     <li class="menu-item menu-item-has-children">
                                         <a href="#">Portals</a>
                                         <ul class="sub-menu">
-                                            <li class="menu-item"><a href="#">Client Portal</a></li>
-                                            <li class="menu-item"><a href="#">Research Portal</a></li>
+                                            <li class="menu-item"><a href="#">Client Center</a></li>
+                                            <li class="menu-item"><a href="#">Investment Research</a></li>
                                         </ul>
                                     </li>
                                     <li class="menu-item menu-item-has-children">
@@ -170,7 +170,7 @@
                                                 <a href="asset-management.html" class="sf-with-ul-pre"><span class="corzo-menu-item-description">03</span>Our Services</a>
                                                 <ul class="sub-menu">
                                                     <li class="menu-item" data-size="60"><a href="asset-management.html">Securities Trading</a></li>
-                                                    <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Market</a></li>
+                                                    <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                                     <li class="menu-item" data-size="60"><a href="smart-manufacturing.html">Investment Research</a></li>
                                                     <li class="menu-item" data-size="60"><a href="risk-management.html">Investment Advisory</a></li>
                                                     <li class="menu-item" data-size="60"><a href="insurance.html">Strategic Advisory</a></li>
@@ -179,10 +179,10 @@
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
                                                 <a href="#" class="sf-with-ul-pre">
-                                                    <span class="corzo-menu-item-description">04</span>Portal</a>
+                                                    <span class="corzo-menu-item-description">04</span>Portals</a>
                                                 <ul class="sub-menu">
-                                                    <li class="menu-item"><a href="#">Client Portal</a></li>
-                                                    <li class="menu-item"><a href="#">Research</a></li>
+                                                    <li class="menu-item"><a href="#">Client Center</a></li>
+                                                    <li class="menu-item"><a href="#">Investment Research</a></li>
                                                 </ul>
                                             </li>
                                             <li class="menu-item menu-item-has-children corzo-normal-menu">
@@ -373,6 +373,7 @@
                                     data-parallax-speed="0"
                                 ></div>
                             </div>
+
                             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
                                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                                     <div class="gdlr-core-pbf-column gdlr-core-column-36 gdlr-core-column-first" id="gdlr-core-column-19865">
@@ -430,6 +431,7 @@
                                                                 <span class="gdlr-core-icon-list-icon-wrap gdlr-core-left" style="margin-top: 4px; margin-right: 10px;">
                                                                     <i class="gdlr-core-icon-list-icon icon-check" style="color: #f7821e; font-size: 19px; width: 19px;"></i>
                                                                 </span>
+
                                                                 <div class="gdlr-core-icon-list-content-wrap">
                                                                     <span class="gdlr-core-icon-list-content" style="color: #ffffff; font-size: 19px; font-weight: 500; text-transform: none; letter-spacing: 0px;">
                                                                         Open-ended and close-ended Mutual Funds
@@ -468,8 +470,9 @@
                                                 <div
                                                     class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                                                     style="background-image: url(upload/img-column-mid.jpg); background-size: cover; background-position: center;"
-                                                    data-parallax-speed="0"
-                                                ></div>
+                                                    data-parallax-speed="0">
+
+                                                </div>
                                             </div>
                                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js"></div>
                                         </div>
@@ -477,6 +480,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="gdlr-core-pbf-section">
                             <div class="gdlr-core-pbf-section-container gdlr-core-container clearfix">
                                 <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first" id="gdlr-core-column-60251" style="z-index: 9;">
@@ -493,6 +497,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="gdlr-core-pbf-wrapper" style="margin: 0px 0px 0px 0px; padding: 100px 0px 90px 0px;">
                             <div class="gdlr-core-pbf-background-wrap" style="background-color: #f7f7f7;"></div>
                             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
@@ -500,6 +505,7 @@
                                     <div class="gdlr-core-pbf-column gdlr-core-column-20 gdlr-core-column-first" id="gdlr-core-column-47742">
                                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js">
                                             <div class="gdlr-core-pbf-background-wrap"></div>
+
                                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-left-align gdlr-core-item-pdlr" style="padding-bottom: 28px;">
@@ -508,16 +514,6 @@
                                                         </div>
                                                     </div>
                                                 </div>
-<!--                                                <div class="gdlr-core-pbf-element">-->
-<!--                                                    <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">-->
-<!--                                                        <div class="gdlr-core-title-item-title-wrap">-->
-<!--                                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #222222;">-->
-<!--                                                                <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #f7821e; margin-right: 11px;"></span>Asset Planning-->
-<!--                                                                <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>-->
-<!--                                                            </h3>-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
 
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 15px;">
@@ -549,6 +545,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
+
 <!--                                                <div class="gdlr-core-pbf-element">-->
 <!--                                                    <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">-->
 <!--                                                        <div class="gdlr-core-title-item-title-wrap">-->
@@ -559,10 +556,12 @@
 <!--                                                        </div>-->
 <!--                                                    </div>-->
 <!--                                                </div>-->
+
                                                 <div class="gdlr-core-pbf-element">
                                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 15px;">
                                                         <div class="gdlr-core-text-box-item-content" style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; color: #6c6c6c;">
-                                                            <p>Our capital management policies and our advisory inclinations are guided by capital preservation and our priorities for clients
+                                                            <p>
+                                                                Our capital management policies and our advisory inclinations are guided by capital preservation and our priorities for clients
                                                                 revolve around safety, liquidity, and return.
                                                             </p>
                                                         </div>
@@ -573,44 +572,11 @@
                                                         <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #f7821e; border-width: 2px;"></div>
                                                     </div>
                                                 </div>
+
                                             </div>
                                         </div>
                                     </div>
-<!--                                    <div class="gdlr-core-pbf-column gdlr-core-column-20">-->
-<!--                                        <div class="gdlr-core-pbf-column-content-margin gdlr-core-js">-->
-<!--                                            <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js">-->
-<!--                                                <div class="gdlr-core-pbf-element">-->
-<!--                                                    <div class="gdlr-core-image-item gdlr-core-item-pdb gdlr-core-left-align gdlr-core-item-pdlr" style="padding-bottom: 28px;">-->
-<!--                                                        <div class="gdlr-core-image-item-wrap gdlr-core-media-image gdlr-core-image-item-style-rectangle" style="border-width: 0px; max-width: 73px;">-->
-<!--                                                            <img src="upload/icon03.png" alt="" width="155" height="155" title="icon03" />-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                                <div class="gdlr-core-pbf-element">-->
-<!--                                                    <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">-->
-<!--                                                        <div class="gdlr-core-title-item-title-wrap">-->
-<!--                                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none; color: #222222;">-->
-<!--                                                                <span class="gdlr-core-title-item-left-dot" style="width: 5px; height: 5px; background-color: #f7821e; margin-right: 11px;"></span>Diversification-->
-<!--                                                                <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>-->
-<!--                                                            </h3>-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                                <div class="gdlr-core-pbf-element">-->
-<!--                                                    <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 15px;">-->
-<!--                                                        <div class="gdlr-core-text-box-item-content" style="font-size: 18px; font-weight: 400; letter-spacing: 0px; text-transform: none; color: #6c6c6c;">-->
-<!--                                                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmar.</p>-->
-<!--                                                        </div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                                <div class="gdlr-core-pbf-element">-->
-<!--                                                    <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-center-align" style="margin-bottom: 0px;">-->
-<!--                                                        <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #f7821e; border-width: 2px;"></div>-->
-<!--                                                    </div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
+
                                 </div>
                             </div>
                         </div>
@@ -640,13 +606,13 @@
                             </div>
                             <div class="corzo-footer-column corzo-item-pdlr corzo-column-15">
                                 <div id="gdlr-core-custom-menu-widget-1" class="widget widget_gdlr-core-custom-menu-widget corzo-widget">
-                                    <h1 class="corzo-widget-title corzo-with-divider">About Us</h1>
+                                    <h1 class="corzo-widget-title corzo-with-divider">Quick Links</h1>
                                     <span class="clear"></span>
                                     <div class="menu-quick-links-container">
                                         <ul id="menu-quick-links" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-half">
                                             <li class="menu-item corzo-normal-menu"><a href="smart-manufacturing.html">Services</a></li>
                                             <li class="menu-item corzo-normal-menu"><a href="#">Privacy Policy</a></li>
-                                            <li class="menu-item corzo-normal-menu"><a href="about.html">Corporate Profile</a></li>
+                                            <li class="menu-item corzo-normal-menu"><a href="about.html">Corporate</a></li>
                                             <li class="menu-item corzo-normal-menu"><a href="faq.html">FAQs</a></li>
                                             <li class="menu-item corzo-normal-menu"><a href="#">Research</a></li>
                                             <li class="menu-item corzo-normal-menu"><a href="contact-3.html">Contact Us</a></li>
@@ -718,7 +684,7 @@
                                         <i class="fa fa-instagram"></i>
                                     </a>
                                 </div>
-                                <span class="gdlr-core-space-shortcode" style="margin-top: 20px;"></span> © 2022 Constcap, Ltd.
+                                <span class="gdlr-core-space-shortcode" style="margin-top: 20px;"></span> © 2022 Constant Capital Ghana.
                             </div>
                         </div>
                     </div>
