--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                             <span class="corzo-menu-item-description">03</span>Services</a>
                                         <ul class="sub-menu">
                                             <li class="menu-item" data-size="60"><a href="asset-management.html">Securities Trading</a></li>
-                                            <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Fianancings&amp; Capital Market</a></li>
+                                            <li class="menu-item" data-size="60"><a href="merge-acquisition.html">Financings &amp; Capital Markets</a></li>
                                             <li class="menu-item" data-size="60"><a href="smart-manufacturing.html">Investment Research</a></li>
                                             <li class="menu-item" data-size="60"><a href="risk-management.html">Investment Advisory</a></li>
                                             <li class="menu-item" data-size="60"><a href="insurance.html.html">Strategic Advisory</a></li>
@@ -1268,10 +1268,12 @@
                                             <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"
                                                  style="padding-bottom: 40px;">
                                                 <a class="gdlr-core-button gdlr-core-button-transparent gdlr-core-left-align gdlr-core-button-with-border"
-                                                   href="about-2.html" id="gdlr-core-button-id-77414">
+                                                   href="about.html" id="gdlr-core-button-id-77414">
                                                     <span class="gdlr-core-content">Learn More</span><i
                                                         class="gdlr-core-pos-right ion-ios-arrow-thin-right"
-                                                        style="font-size: 31px; color: #f7821e;"></i>
+                                                        style="font-size: 31px; color: #f7821e;">
+
+                                                </i>
                                                 </a>
                                             </div>
                                         </div>
@@ -1436,59 +1438,6 @@
                             </div>
 
 
-
-
-<!--                            <div class="gdlr-core-pbf-column gdlr-core-column-60 gdlr-core-column-first" id="gdlr-core-column-30995">-->
-
-<!--                                <div class="gdlr-core-pbf-column-content-margin gdlr-core-js" style="padding: 140px 0px 0px 0px;">-->
-<!--                                    <div class="gdlr-core-pbf-background-wrap"></div>-->
-<!--                                    <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js" style="max-width: 750px;">-->
-<!--                                        <div class="gdlr-core-pbf-element">-->
-<!--                                            <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-item-pdlr gdlr-core-center-align"-->
-<!--                                                 style="margin-bottom: 70px;">-->
-<!--                                                <div class="gdlr-core-divider-container" style="max-width: 180px;">-->
-<!--                                                    <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #d5d5d5;"></div>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-
-<!--                                        <div class="gdlr-core-pbf-element">-->
-<!--                                            <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"-->
-<!--                                                    style="padding-bottom: 40px;" id="gdlr-core-title-item-1">-->
-<!--                                                <div class="gdlr-core-title-item-title-wrap">-->
-<!--                                                    <h3 class="gdlr-core-title-item-title gdlr-core-skin-title" style="font-size: 37px; font-weight: 600; letter-spacing: 0px; text-transform: none; color: #0f102f;">-->
-<!--                                                        Let’s discuss about how we can help make your business better-->
-<!--                                                        <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>-->
-<!--                                                    </h3>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-
-<!--                                        <div class="gdlr-core-pbf-element">-->
-<!--                                            <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align" style="padding-bottom: 0px;">-->
-<!--                                                <a class="gdlr-core-button gdlr-core-button-gradient gdlr-core-center-align gdlr-core-button-no-border"-->
-<!--                                                        href="contact-3.html"-->
-<!--                                                        style=" font-size: 16px;-->
-<!--                                                                font-weight: 700;-->
-<!--                                                                letter-spacing: 0px;-->
-<!--                                                                color: #ffffff;-->
-<!--                                                                padding: 3px 33px 3px 33px;-->
-<!--                                                                text-transform: none;-->
-<!--                                                                border-radius: 33px;-->
-<!--                                                                -moz-border-radius: 33px;-->
-<!--                                                                -webkit-border-radius: 33px;-->
-<!--                                                                background: #f7821e;-->
-<!--                                                            ">-->
-<!--                                                    <span class="gdlr-core-content">Get Consult</span><i-->
-<!--                                                        class="gdlr-core-pos-right ion-ios-arrow-thin-right"-->
-<!--                                                        style="font-size: 31px; color: #ffffff;"></i>-->
-<!--                                                </a>-->
-<!--                                            </div>-->
-<!--                                        </div>-->
-
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
 
                         </div>
                     </div>
